--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 aiohttp==3.6.0
+aioredis==1.3.0
 async-timeout==3.0.1
 attrs==19.1.0
 chardet==3.0.4
+hiredis==1.0.1
 idna==2.8
 idna-ssl==1.1.0
 multidict==4.5.2
