--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-aiohttp==3.6.0
+aiohttp==3.6.2
+aiohttp-prometheus==0.1.0
 async-timeout==3.0.1
-attrs==19.1.0
+attrs==19.3.0
 chardet==3.0.4
 idna==2.8
-idna-ssl==1.1.0
-multidict==4.5.2
-typing-extensions==3.7.4
-yarl==1.3.0
+multidict==4.6.1
+prometheus-client==0.7.1
+yarl==1.4.1
